syntax = "proto3";
package fx.migrate.v1;

option go_package = "github.com/functionx/fx-core/x/migrate/types";

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "migrate/v1/migrate.proto";

// Query provides defines the gRPC querier service.
service Query {
  // DenomTrace queries a denomination trace information.
  rpc MigrateRecord(QueryMigrateRecordRequest) returns (QueryMigrateRecordResponse) {
    option (google.api.http).get = "/migrate/v1/record/{address}";
  }
}

message QueryMigrateRecordRequest {string address = 1;}

message QueryMigrateRecordResponse {
  // has migrate true-> migrated, false-> not migrated.
  bool found = 1;
  // migrateRecord defines the the migrate record.
  MigrateRecord migrateRecord = 2 [(gogoproto.nullable) = false];
}